--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@ current: index
     <div class="banner-text">
       <p>Promise-Desert 2020 早春系列</p>
       <h2>看得清，才能看得遠</h2>
-      <a href="#">立即購買</a>
+      <a href="product.html">立即購買</a>
     </div>
   </div>
 </div>
