--- a/app/index.html
+++ b/app/index.html
@@ -130,9 +130,9 @@ current: index
         <label for="name">姓名</label>
         <input type="text" placeholder="陳小明" required>
         <label for="name">聯絡電話</label>
-        <input type="text" placeholder="0912-345-678" required>
+        <input type="tel" placeholder="0912-345-678" required>
         <label for="name">電子郵件</label>
-        <input type="text" placeholder="example@email.com" required>
+        <input type="email" placeholder="example@email.com" required>
         <label for="name">意見反應</label>
         <textarea name="comment" placeholder="請輸入您的意見"></textarea>
         <div class="check">
