--- a/app/location.html
+++ b/app/location.html
@@ -14,9 +14,9 @@ current: index
         </section>
         <section class="location">
             <div class="locationSelect">
-                <p>選擇地區</p>
-                <select name="" id="">
-                    <option value="">台北市</option>
+                <label for="location">選擇地區</label>
+                <select name="" id="location">
+                    <option value="taipei">台北市</option>
                     <option value="">台中市</option>
                     <option value="">高雄市</option>
                 </select>
